--- a/ClientChat/MainWindow.xaml
+++ b/ClientChat/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ClientChat"
         xmlns:emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="560" Width="886" ResizeMode="NoResize">
+        Title="MainWindow" Height="584" Width="886" ResizeMode="NoResize">
     <Grid Margin="1,1,1,1" Background="#AA60C8">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" MinHeight="406"/>
@@ -23,7 +23,7 @@
                     VerticalAlignment="Center" 
                     Padding="5,0" Margin="4,0,0,0"/>
 
-                <!-- Watermark (placeholder) -->
+                <!-- Watermark -->
                 <TextBlock Text="Enter your name"
                    Foreground="Gray"
                    Margin="11,0,0,0"
@@ -64,26 +64,23 @@
                 </Grid.RowDefinitions>
                 <!-- Phần 2: Hiển thị tin nhắn -->
 
-                <emoji:RichTextBox x:Name="txtChat"
-                                     IsReadOnly="True"
-                                     Background="Transparent"
-                                     BorderThickness="0"                        
+                <RichTextBox x:Name="txtChat"  
+                                     Height="410" 
+                                     IsReadOnly="True" 
                                      VerticalScrollBarVisibility="Auto"
-                                     FontSize="14"
+                                     Background="Transparent" 
+                                     BorderThickness="0"
+                                     BorderBrush="Transparent"
                                      Padding="0"
-                                     Margin="2,-1,-2,11">
-                    <emoji:RichTextBox.Resources>
-                        <Style TargetType="{x:Type Paragraph}">
-                            <Setter Property="Margin" Value="0"/>
-                        </Style>
-                    </emoji:RichTextBox.Resources>
-                </emoji:RichTextBox>
+                                     Margin="1,0,3,0"
+                                     FontSize="15"
+                    />
 
 
 
 
                 <!-- Phần 3: Ô nhập và nút gửi -->
-                <Grid Margin="4,324,5,530" Grid.RowSpan="2">
+                <Grid Margin="6,348,3,506" Grid.RowSpan="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
@@ -127,7 +124,7 @@
                     </Border>
 
                     <!-- Nút emoji -->
-                    <Border CornerRadius="5" Background="White" Padding="0" Margin="721,74,69,0">
+                    <Border CornerRadius="5" Background="White" Padding="0" Margin="721,74,69,18">
                         <Button x:Name="btnEmoji"
                                 Content="😊"
                                 FontSize="20"
